add Manual Search, Recover and SiteScreenshot