@@ -1,26 +1,20 @@
 package com.lucas.ferreira.maburn.controller;
 
 import java.net.URL;
-import java.util.HashMap;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.ResourceBundle;
 import java.util.stream.Collectors;
 
-import com.lucas.ferreira.maburn.fetch.FetchTitle;
+import com.lucas.ferreira.maburn.fetch.FetchInSystem;
+import com.lucas.ferreira.maburn.fetch.TitleFetcher;
+import com.lucas.ferreira.maburn.fetch.TitleSearcher;
 import com.lucas.ferreira.maburn.model.enums.Category;
+import com.lucas.ferreira.maburn.model.enums.FetchItemType;
 import com.lucas.ferreira.maburn.model.enums.Icons;
-import com.lucas.ferreira.maburn.model.enums.MessageError;
-import com.lucas.ferreira.maburn.model.enums.SearchEngine;
 import com.lucas.ferreira.maburn.model.enums.Sites;
-import com.lucas.ferreira.maburn.model.items.CollectionItem;
-import com.lucas.ferreira.maburn.model.messages.ErrorMessage;
-import com.lucas.ferreira.maburn.model.messages.Message;
-import com.lucas.ferreira.maburn.model.messages.SucceedMessage;
-import com.lucas.ferreira.maburn.model.messages.WarningMessage;
-import com.lucas.ferreira.maburn.model.search.SearchScraped;
-import com.lucas.ferreira.maburn.model.search.SearchScraping;
-import com.lucas.ferreira.maburn.model.webscraping.scraping.AnimeScraping;
+import com.lucas.ferreira.maburn.model.items.CollectionTitle;
 import com.lucas.ferreira.maburn.model.webscraping.scraping.TitleScraped;
 import com.lucas.ferreira.maburn.util.Icon;
 import com.lucas.ferreira.maburn.util.IconConfig;
@@ -30,21 +24,20 @@ import com.lucas.ferreira.maburn.view.navigator.Navigator;
 import javafx.application.Platform;
 import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
+import javafx.scene.control.Button;
 import javafx.scene.control.ComboBox;
 import javafx.scene.control.Label;
 import javafx.scene.control.TextArea;
 import javafx.scene.image.ImageView;
+import javafx.scene.layout.AnchorPane;
 
 public class TitleDownloadController implements Initializable {
 
 	@FXML
-	private ComboBox<String> cbSelect;
+	private AnchorPane apManualSearch;
 
 	@FXML
-	private ComboBox<String> cbItems;
-
-	@FXML
-	private ComboBox<Sites> cbSource;
+	private Button btnDownload;
 
 	@FXML
 	private ImageView imgThumbnail;
@@ -55,11 +48,24 @@ public class TitleDownloadController implements Initializable {
 	private ImageView imgFetch;
 	@FXML
 	private ImageView imgRecover;
+
+	@FXML
+	private ImageView imgManualSearch;
+
 	@FXML
 	private ImageView imgChoose;
 
 	@FXML
 	private ImageView imgDownloadStart;
+
+	@FXML
+	private ComboBox<FetchItemType> cbSelect;
+
+	@FXML
+	private ComboBox<String> cbItems;
+
+	@FXML
+	private ComboBox<Sites> cbSource;
 
 	@FXML
 	private TextArea txtFetchMsg;
@@ -83,6 +89,9 @@ public class TitleDownloadController implements Initializable {
 	private Label lblRecover;
 
 	@FXML
+	private Label lblManualSearch;
+
+	@FXML
 	private Label lblStart;
 
 	@FXML
@@ -93,20 +102,25 @@ public class TitleDownloadController implements Initializable {
 
 	@FXML
 	private Label lblItems;
+	private Navigator navigator = new Navigator();
 
 	private String ICON_PATH = "icons/";
-	private FetchTitle fetch = new FetchTitle();
-	private CollectionItem item;
+	private TitleFetcher titleDownloadFetcher;
+	private TitleScraped titleScraped;
+	private SiteScreenshot siteScreenshot;
+	private ManualSearchAlertController manualSearchAlertController;
+	private FetchInSystem fetchInSystem = new FetchInSystem();
 	private Category category;
-	private Sites sourceSelect;
+	private List<String> taggedItems;
+
+	private CollectionTitle title;
 
 	@Override
 	public void initialize(URL location, ResourceBundle resources) {
-		Navigator navigator = new Navigator();
 		try {
 			initializeTitle();
-			initializeImages();
-			initializeLabels();
+			initializeButtons();
+			initializeIcons();
 			initializeComboBoxs();
 			initializeState();
 		} catch (IllegalAccessError e) {
@@ -118,28 +132,36 @@ public class TitleDownloadController implements Initializable {
 		}
 	}
 
+	private void initializeButtons() {
+		btnDownload.setOnAction(event -> onClickDownloadStart());
+	}
+
 	private void initializeTitle() {
 		TitleInterfaceController controller = (TitleInterfaceController) Navigator.getMapNavigator()
 				.get(Interfaces.TITLE);
 		if (controller == null || controller.getTitle() == null) {
 			throw new IllegalAccessError("Title can't be null");
 		}
-		item = controller.getTitle();
-		category = Category.ANIME;
+		category = controller.getTitle().getCategory();
+		title = controller.getTitle();
+		titleDownloadFetcher = new TitleFetcher(title, txtFetchMsg);
 
-		System.out.println(item.getTitleDataBase());
 	}
 
 	private void initializeState() {
+		manualSearchAlertController = new ManualSearchAlertController(new ManualSearchAlert(apManualSearch));
 
 	}
 
-	public void initializeImages() {
+	public void initializeIcons() {
 
 		Icon iconFetch = new Icon(imgFetch, new IconConfig(ICON_PATH, Icons.FETCH));
 		iconFetch.setProperties((event) -> onClickFetch());
 		Icon iconRecover = new Icon(imgRecover, new IconConfig(ICON_PATH, Icons.RECOVER));
 		iconRecover.setProperties((event) -> onClickRecover());
+		Icon iconManualSearch = new Icon(imgManualSearch, new IconConfig(ICON_PATH, Icons.MANUAL_SEARCH));
+		iconManualSearch.setProperties((event) -> onClickManualSearch());
+
 		Icon iconDownloadStart = new Icon(imgDownloadStart, new IconConfig(ICON_PATH, Icons.DOWNLOAD_START));
 		iconDownloadStart.setProperties((event) -> onClickDownloadStart());
 		Icon iconSource = new Icon(imgSource, new IconConfig(ICON_PATH, Icons.SOURCE));
@@ -150,101 +172,84 @@ public class TitleDownloadController implements Initializable {
 	}
 
 	public void onClickFetch() {
-
-		Message errorMessage = new ErrorMessage(txtFetchMsg);
-		Message warningMessage = new WarningMessage(txtFetchMsg);
-		Message succededMessage = new SucceedMessage(txtFetchMsg);
-
-		final String errorSourceMsg = "You need select a source before fetch.";
-		final String errorScrapingMsg = "Sorry something went wrong. Try again or other source";
-		final String errorSearchMsg = "No results found.";
-		final String warningMsgSearch = "Searching ...";
-		final String warningMsgFetch = "Fetching please wait ...";
-		final String succededMsg = item.getTitleDataBase() + " fetched!";
-		final String namedItem = category == Category.ANIME ? "Episode " : "Chapter ";
-
 		new Thread(() -> {
 			try {
-				
-				if (sourceSelect == null) {
-					throw new NullPointerException();
-				}
-				if (errorMessage.isShowing()) {
-					errorMessage.hideMessage();
-				}
+				titleScraped = titleDownloadFetcher.automaticFetch(cbSource.getValue(), new TitleSearcher(txtFetchMsg));
+				organizeFetchResult();
 
-				warningMessage.showMessage(warningMsgSearch);
+			} catch (Exception e) {
+				// TODO Auto-generated catch block
+				e.printStackTrace();
+			}
+		}).start();
+	}
 
-				if (cbItems.getItems().size() > 0) {
-					cbItems.getItems().clear();
-				}
+	public void onClickRecover() {
+		new Thread(() -> {
+			try {
+				titleScraped = titleDownloadFetcher.systemFetch(cbSource.getValue(), fetchInSystem);
+				organizeFetchResult();
 
-				SearchScraping searchScraping = new SearchScraping(item.getTitleDataBase(), SearchEngine.GOOGLE,
-						cbSource.getValue());
-				SearchScraped searchScraped = searchScraping.search();
-				if (searchScraped == null || searchScraped.getResults().size() == 0) {
-					throw new IndexOutOfBoundsException();
-				}
-
-				String bestResult = searchScraped.getResults().get(0);
-
-				warningMessage.showMessage(warningMsgFetch);
-				TitleScraped titleScraped = fetch.fetch(new AnimeScraping(cbSource.getValue()), bestResult);
-				if(titleScraped == null) {
-					throw new IllegalArgumentException();
-				}
-				List<String> items = titleScraped.getItemsScraped();
-				System.out.println(titleScraped.getPageInfo().getImage().getException());
-				imgThumbnail.setImage(titleScraped.getPageInfo().getImage());
-				imgThumbnail.setVisible(true);
-
-				if (items == null) {
-					throw new IllegalArgumentException();
-				}
-
-				List<String> namedItems = items.stream().mapToInt(item -> items.indexOf(item) + 1).boxed()
-						.map(n -> namedItem + n).collect(Collectors.toList());
-
-				Platform.runLater(() -> cbItems.getItems().setAll(namedItems));
-				succededMessage.showMessage(succededMsg);
-
-			} catch (NullPointerException e) {
-				errorMessage.showMessage(errorSourceMsg);
-			} catch (IllegalArgumentException e) {
-				errorMessage.showMessage(errorScrapingMsg);
-
-			} catch (IndexOutOfBoundsException e) {
-				// TODO: handle exception
-				errorMessage.showMessage(errorSearchMsg);
+			} catch (Exception e) {
+				// TODO Auto-generated catch block
+				e.printStackTrace();
 			}
 		}).start();
 
 	}
 
-	public void onClickRecover() {
-		System.out.println("Recover");
+	public void onClickManualSearch() {
+
+		new Thread(() -> {
+			try {
+				titleScraped = titleDownloadFetcher.manualFetch(cbSource.getValue(), manualSearchAlertController);
+				if (titleScraped != null)
+					organizeFetchResult();
+			} catch (Exception e) {
+				// TODO Auto-generated catch block
+				e.printStackTrace();
+			}
+		}).start();
+		;
+
 	}
 
 	public void onClickDownloadStart() {
-		System.out.println("Download Start");
+		ItemCombox itemCombox = new ItemCombox();
+		Map<String, String> namedItemsValues = itemCombox.itemsValuesMap(titleScraped, taggedItems);
+		System.out.println(namedItemsValues.get(cbItems.getValue()));
+
 	}
 
-	public void initializeLabels() {
+	private void organizeFetchResult() {
+		if (titleScraped != null) {
+			ItemCombox itemCombox = new ItemCombox();
+			String tag = category == Category.ANIME ? "Episode " : "Chapter ";
 
+			taggedItems = itemCombox.valuesToNumberTagItems(titleScraped, tag);
+			itemCombox.itemsValuesMap(titleScraped, taggedItems);
+			Platform.runLater(() -> cbItems.getItems().setAll(taggedItems));
+
+			siteScreenshot = new SiteScreenshot(imgThumbnail);
+			siteScreenshot.loadImage(titleScraped.getPageInfo().getImage());
+			siteScreenshot.showImage();
+
+			cbItems.setDisable(false);
+			cbSelect.setDisable(false);
+
+			fetchInSystem.save(title, cbSource.getValue(), titleScraped.getTitleUrl());
+
+		}
 	}
 
 	public void initializeComboBoxs() {
 
-		// TEMP
 		List<Sites> sites = List.of(Sites.values()).stream().filter((f) -> f.getCategory() == category)
 				.collect(Collectors.toList());
 		cbSource.getItems().addAll(sites);
-		cbSource.valueProperty().addListener((obs, oldValue, newValue) -> {
-			System.out.println(newValue);
-			sourceSelect = newValue;
-		});
 
-		cbSelect.getItems().addAll(List.of("Select One", "Select All", "Update", "Between"));
+		cbSelect.getItems().addAll(Arrays.asList((FetchItemType.values())));
+		cbSelect.valueProperty().addListener(new FetchTypeSelect(cbItems));
 	}
 
 }
